2008-09-12  Jonathan Pryor  <jpryor@novell.com>

	* mktuples: Add .Match() method, which is a "nicer" version of
	  ObjectRocks.Match() for use with tuples.
	* doc/fixup.sed: Allow .Match() documentation to be imported.
	* doc/en/**: Flush.

2008-09-11  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush.

2008-09-10  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush.

2008-09-07  Jonathan Pryor  <jpryor@novell.com>

	* gendarm.ignore: Add additional members to ignore.

2008-09-07  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add Mono.Rocks/Cons.cs 
	  to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add
	  Tests/Mono.Rocks.Tests/ConsTest.cs to the build.
	* doc/en/**: Flush updated types.

2008-09-06  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add Mono.Rocks/Maybe.cs 
	  to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add
	  Tests/Mono.Rocks.Tests/MaybeTest.cs to the build.

2008-09-04  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush TextReaderRocks & some StringRocks docs.

2008-09-04  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush.
	* Generator.pm: Fix GetDocAction(), GetDocFunc() to pass the correct number
	  of types to GetDoc*Type(); allow GetDocFunc() to accept the return type
	  name (needed for .Compose() documentation).
	* Makefile: Rename mkcurry to mkdelegates.
	* mkcurry: Rename to mkdelegates.
	* mkdelegates: Add .Compose() extension methods.
	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Rename Mono.Rocks/Curry.cs 
	  to Mono.Rocks/Delegates.cs.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Rename
	  Tests/Mono.Rocks.Tests/CurryTest.cs to 
	  Tests/Mono.Rocks.Tests/DelegateTest.cs.

2008-09-03  Jonathan Pryor  <jpryor@novell.com>

	* mktuples, doc/en/**: Fix doc typo.

2008-09-03  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush documentation for Int32Rocks.
