@@ -39,7 +39,6 @@
   <ItemGroup>
     <Compile Include="Mono.Rocks\AssemblyInfo.cs" />
     <Compile Include="Mono.Rocks\Check.cs" />
-    <Compile Include="Mono.Rocks\Cons.cs" />
     <Compile Include="Mono.Rocks\Delegates.cs" />
     <Compile Include="Mono.Rocks\ICustomAttributeProvider.cs" />
     <Compile Include="Mono.Rocks\IEnumerable.cs" />
