@@ -53,7 +53,6 @@
   </Copyright>
   <Types>
     <Namespace Name="Mono.Rocks">
-      <Type Name="Cons`1" DisplayName="Cons&lt;T&gt;" Kind="Class" />
       <Type Name="DelegateRocks" Kind="Class" />
       <Type Name="ICustomAttributeProviderRocks" Kind="Class" />
       <Type Name="IEnumerableRocks" Kind="Class" />
@@ -4129,30 +4128,6 @@
           <summary>To be added.</summary>
         </Docs>
         <Link Type="Mono.Rocks.IEnumerableRocks" Member="M:Mono.Rocks.IEnumerableRocks.SplitAt``1(System.Collections.Generic.IEnumerable{``0},System.Int32)" />
-      </Member>
-    </ExtensionMethod>
-    <ExtensionMethod>
-      <Targets>
-        <Target Type="T:System.Collections.Generic.IEnumerable`1" />
-      </Targets>
-      <Member MemberName="ToCons&lt;T&gt;">
-        <MemberSignature Language="C#" Value="public static Mono.Rocks.Cons&lt;T&gt; ToCons&lt;T&gt; (this System.Collections.Generic.IEnumerable&lt;T&gt; self);" />
-        <MemberType>ExtensionMethod</MemberType>
-        <ReturnValue>
-          <ReturnType>Mono.Rocks.Cons&lt;T&gt;</ReturnType>
-        </ReturnValue>
-        <TypeParameters>
-          <TypeParameter Name="T" />
-        </TypeParameters>
-        <Parameters>
-          <Parameter Name="self" Type="System.Collections.Generic.IEnumerable&lt;T&gt;" RefType="this" />
-        </Parameters>
-        <Docs>
-          <typeparam name="T">To be added.</typeparam>
-          <param name="self">To be added.</param>
-          <summary>To be added.</summary>
-        </Docs>
-        <Link Type="Mono.Rocks.IEnumerableRocks" Member="M:Mono.Rocks.IEnumerableRocks.ToCons``1(System.Collections.Generic.IEnumerable{``0})" />
       </Member>
     </ExtensionMethod>
     <ExtensionMethod>
