@@ -1,3 +1,7 @@
+2008-09-14  Jonathan Pryor  <jpryor@novell.com>
+
+	* Cons.cs: Remove.  There doesn't seem to be much point to it.
+
 2008-09-12  Jonathan Pryor  <jpryor@novell.com>
 
 	* Tuples.cs: Flush (adds .Match() method).
