@@ -1,3 +1,7 @@
+2008-09-14  Jonathan Pryor  <jpryor@novell.com>
+
+	* ConsTest.cs: Remove, as Cons<T> was removed.
+
 2008-09-09  Jonathan Pryor  <jpryor@novell.com>
 
 	* TextReaderTest.cs: Add tests for .Words(TextReaderRocksOptions).
